salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Signal__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>Evidence</label>
    <type>LongTextArea</type>
    <length>4000</length>
    <description>The raw observation, in the source system words. An advisor about to call deserves the fact, not only our summary of it.</description>
</CustomField>