salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Signal__c/fields/Observed_On__c.field-meta.xml
<CustomField>
    <fullName>Observed_On__c</fullName>
    <label>Observed On</label>
    <type>DateTime</type>
    <description>When the source system saw it, as distinct from when the event itself happened. The lag between the two is how stale a feed is.</description>
</CustomField>