salesforce/omnishift-sf/force-app/main/default/objects/Omnishift_Signal__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <type>Picklist</type>
    <description>Which tool observed this. The firm runs several and they see different things: a filing is not a page view is not a survey answer.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>WealthFeed</fullName><default>false</default><label>WealthFeed</label></value>
            <value><fullName>VisitIQ</fullName><default>false</default><label>VisitIQ</label></value>
            <value><fullName>SmartAsset AMP</fullName><default>false</default><label>SmartAsset AMP</label></value>
            <value><fullName>Account Engagement</fullName><default>false</default><label>Account Engagement</label></value>
            <value><fullName>GetFeedback</fullName><default>false</default><label>GetFeedback</label></value>
            <value><fullName>CorralData</fullName><default>false</default><label>CorralData</label></value>
            <value><fullName>Zoom</fullName><default>false</default><label>Zoom</label></value>
            <value><fullName>LinkedIn</fullName><default>false</default><label>LinkedIn</label></value>
            <value><fullName>Public web</fullName><default>false</default><label>Public web</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>